--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "email-validator": "^2.0.4",
+    "formik": "^1.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -12,7 +14,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
